@@ -9,14 +9,15 @@
 ;=====================================
 
 ; Helper functions to compute addresses more compactly.
-function gfx_addr(offset)  = (retry_gfx+(offset*$20))
 function vram_addr(offset) = (!base_vram+(offset*$10))
-function vram_size(num)    = (num*$20)
+function gfx_size(num)     = (num*$20)
 
 level:
     ; Skip if it's not time to upload the tiles.
-    lda !ram_update_request : beq .return
-    
+    lda !ram_update_request : bne .upload
+    rtl
+
+.upload:
     ; Only upload on this frame.
     dec : sta !ram_update_request
 
@@ -28,56 +29,65 @@ level:
     lda !ram_disable_exit : tay
     ldx.w .index,y
 
+    ; Set GFX address depending on the box being enabled or not.
+    ; Additionally the disable box flag is copied to $02 for later.
+    lda !ram_disable_box : sta $02
+    asl : tay
     rep #$20
+    lda.w .gfx_addr,y : sta $00
+
 .loop:
-    ; Increment address after each word.
     ldy.b #$80 : sty $2115
-
-    ; Write from CPU to PPU, 2 registers write once, to $2118 (VRAM).
     lda.w #$1801 : sta $4320
-
-    ; VRAM address to write to.
     lda.w .dest,x : sta $2116
-
-    ; Source address (low and high byte) to upload from.
-    lda.w .src,x : sta $4322
-
-    ; Source address (bank byte) to upload from.
+    lda.w .src,x : clc : adc $00 : sta $4322
     ldy.b #retry_gfx>>16 : sty $4324
+    ; All uploads are 8x8 except the cursor,
+    ; which is 16x8 only when the prompt box is enabled.
+    lda.w #gfx_size(1)
+    cpx #$00 : bne +
+    ldy $02 : bne +
+    asl
++   sta $4325
+    ldy.b #$04 : sty $420B
+    dex #2 : bpl .loop
+..end:
+    plb
 
-    ; Upload 8x8 tile(s).
-    lda.w .size,x : sta $4325
-
-    ; Start DMA transfer on channel 2.
+    ; If the box is enabled, transfer the black tiles too.
+    ldy $02 : bne .return
+    ldy.b #$80 : sty $2115
+    lda.w #$1801 : sta $4320
+    lda.w #vram_addr(!tile_blk) : sta $2116
+    lda.w #retry_gfx_box+gfx_size(7) : sta $4322
+    ldy.b #retry_gfx>>16 : sty $4324
+    lda.w #gfx_size(2) : sta $4325
     ldy.b #$04 : sty $420B
 
-    ; Go to the next tile.
-    dex #2 : bpl .loop
-
-.end:
-    sep #$20
-    plb
 .return:
+    sep #$20
     rtl
+
+; Base address of the letters GFX when the prompt box is enabled/disabled.
+.gfx_addr:
+    dw retry_gfx_box
+    dw retry_gfx_no_box
 
 ; Index in the below tables to start from when the exit option is enabled/disabled.
 .index:
     db .src_end-.src-2
     db .src_exit-.src-2
 
+; Tables for cursor and "RETRY" tiles.
 .src:
-    dw gfx_addr(5) ; Cursor
-    dw gfx_addr(2) ; R
-    dw gfx_addr(3) ; E
-    dw gfx_addr(1) ; T
-    dw gfx_addr(7) ; Y
-if not(!no_prompt_box)
-    dw gfx_addr(6) ; Black
-    dw gfx_addr(6) ; Black
-endif
+    dw gfx_size(6) ; Cursor
+    dw gfx_size(2) ; R
+    dw gfx_size(3) ; E
+    dw gfx_size(1) ; T
+    dw gfx_size(5) ; Y
 ..exit:
-    dw gfx_addr(4) ; X
-    dw gfx_addr(0) ; I
+    dw gfx_size(4) ; X
+    dw gfx_size(0) ; I
 ..end:
 
 .dest:
@@ -86,30 +96,7 @@ endif
     dw vram_addr(!tile_e)
     dw vram_addr(!tile_t)
     dw vram_addr(!tile_y)
-if not(!no_prompt_box)
-    dw vram_addr(!tile_blk)
-    dw vram_addr(!tile_blk+1)
-endif
 ..exit:
     dw vram_addr(!tile_x)
     dw vram_addr(!tile_i)
-..end:
-
-.size:
-if !no_prompt_box
-    dw vram_size(1) ; Cursor
-else
-    dw vram_size(2) ; Cursor
-endif
-    dw vram_size(1) ; R
-    dw vram_size(1) ; E
-    dw vram_size(1) ; T
-    dw vram_size(1) ; Y
-if not(!no_prompt_box)
-    dw vram_size(1) ; Black
-    dw vram_size(1) ; Black
-endif
-..exit:
-    dw vram_size(1) ; X
-    dw vram_size(1) ; I
 ..end:
