@@ -6,7 +6,8 @@ A: Yes. Additionally to the "effect" table, there's the "!ram_prompt_override" a
 Note that this address by default is never reset outside of title screen load.
 
 Q: Can I keep the Retry prompt but remove the black box?
-A: Yes. Look at "!no_prompt_box" in "retry_config/settings.asm".
+A: Yes. Look at "!no_prompt_box" in "retry_config/settings.asm". You can also remove it only under certain circumstances by setting "!ram_disable_box" to 1 (for more info, see "retry_config/ram.asm" and "docs/ram_map.txt"). For example, you can do it in a Level ASM init to make a level not have the option.
+Note that this address by default is never reset outside of title screen load.
 
 Q: Can I keep the Retry prompt but remove the "exit" option?
 A: Yes. Look at "!no_exit_option" in "retry_config/settings.asm". You can also remove it only under certain circumstances by setting "!ram_disable_exit" to 1 (for more info, see "retry_config/ram.asm" and "docs/ram_map.txt". For example, you can do it in a Level ASM init to make a level not have the option.
@@ -15,4 +16,4 @@ Note that this address by default is never reset outside of title screen load.
 Q: Can I change where the prompt is shown on the screen?
 A: Yes. Look at "!text_x_pos" and "!text_y_pos" in "retry_config/settings.asm". For example, using "!text_x_pos = $08" and "!text_y_pos = $D0" will place it on the lower left corner of the screen.
 Additionally, you can also change it at runtime by writing to the "!ram_prompt_x_pos" and "!ram_prompt_y_pos" addresses (see "docs/ram_map.txt" for more info).
-Either way, if you want to change it you should disable the Retry box ("!no_prompt_box = 1") as its position can't be changed easily.
+Either way, if you want to change it you should disable the Retry box (either by setting "!no_prompt_box = 1" or by writing to "!ram_disable_box" at runtime) as its position can't be changed easily.
